# lfs-shimmy

./: .gitignore  .pyup.yml  LICENSE  Procfile  README.md  app.py  lfs-shimmy.cfg  pyproject.toml  requirements-prod.txt  requirements.txt  tox.ini
.github/workflows/: ci.yml  release.yml  renovate_release.yml
docker/: Dockerfile
lfs_shimmy/: auth.py  config.py  models.py  server.py  storage.py
