[project]
name = "lfs-shimmy"
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
Flask = "3.1.3"
boto3 = "1.43.18"

[tool.poetry.group.prod.dependencies]
gunicorn = "26.0.0"
uvicorn = {version = "0.48.0", extras = ["standard"]}

[tool.poetry.group.test.dependencies]
tox = "*"
tox-current-env = "*"
black = "*"
ruff = "*"
bandit = "*"

[tool.poetry]
package-mode = false

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
