[project]
name = "lfs-shimmy"
requires-python = ">=3.13"
license = "MIT"
readme = "README.md"
dependencies = [
    "fastapi[standard]",
    "pydantic-settings",
    "boto3"
]

[tool.poetry]
package-mode = false

[tool.poetry.group.test.dependencies]
tox = "*"
tox-current-env = "*"
black = "*"
ruff = "*"
bandit = "*"

[tool.ruff]
line-length = 120

[tool.black]
line-length = 120

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
